--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
